[package]
name = "progresslib2"
version = "2.0.0"
authors = ["nikita-skobov"]
edition = "2018"

[dependencies]
tokio = { version = "0.2.23", features = ["full"] }
futures = "0.3.7"
futures-timer = "3.0.2"
delegate = "0.5.0"

[dev-dependencies]
actix-web = "3"
lazy_static = "1.4.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
